Git_to_Salesforce/ Q-assign/objects/Object_Selection_Criteria__c.object
<CustomObject>
    <description>it has selection criteria information to select records from source queue.</description>
    <fields>
        <fullName>Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>Assignment_Group__c</referenceTo>
        <relationshipName>Object_Selection_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QA Object Selection Criteria</label>
    <nameField>
        <label>Object Selection Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Object Selection Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>